--- a/example/index.html
+++ b/example/index.html
@@ -9,7 +9,7 @@
     <title>TextParserLib</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" href="favicon.ico">
-    <script defer src="Example.dart.js"></script>
+    <script defer src="UT.dart.js"></script>
 </head>
 
 <body>
